# MandelbrotExplorer

./: CMakeLists.txt  README.md  build.sh
include/common/: Vec2.hpp
include/components/: ColorBar.hpp  Component.hpp  Mandelbrot.hpp
include/core/: MouseCodes.hpp  Renderer.hpp  Window.hpp
include/events/: Event.hpp  EventDispatcher.hpp  EventHandler.hpp  KeyBoardEvent.hpp  MouseEvent.hpp
include/shared/: AppConstants.hpp  Color.hpp  Mouse.hpp
src/: CMakeLists.txt  main.cpp
